--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ section{
 }
 
 /* ABOUT SECTION */
-#about{
+/* #about{
     height: 100vh;
-}
+} */
 .about{
     display: grid;
     grid-template-columns: repeat(2,2fr);
@@ -126,12 +126,12 @@ section{
     line-height: 1.7;
 }
 /* MENU SECTION */
-#menu{
+/* #menu{
     height: 100vh;
-}
+} */
 .heading{
     text-align: center;
-    padding-top: 45px;
+    /* padding-top: 45px; */
 }
 .heading span{
     color: var(--main-color);
@@ -291,4 +291,68 @@ section{
     transform:scale(1.2) ;
     color: var(--bg-color);
     background: var(--text-color);
+}
+
+@media(max-width:1560px){
+    header{
+        padding: 15px 40px;
+    }
+    :root{
+        --big-font:3.5rem;
+        --hr-font:2rem;
+    }
+}
+
+@media(max-width:1140px){
+    section{
+        padding: 50px 8%;
+    }
+    #menu-icon{
+        display: initial;
+        color: var(--text-color);
+    }
+    header .navbar{
+        position: absolute;
+        top: -400px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: #2b2640;
+        transition: .3s;
+    }
+    header .navbar.active{
+        top: 70px;
+    }
+    .navbar a{
+        padding: 1.5rem;
+        display: block;
+    }
+    .col{
+        width: 50%;
+        margin-bottom: 10px;
+    }
+}
+@media(max-width:720px){
+    .home{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-img{
+        order: 2;
+    }
+    section{
+        padding: 100px 7%;
+    }
+}
+
+@media(max-width:575px){
+    .col{
+        width: 100%;
+    }
 }
